@@ -1,4 +1,5 @@
-// Source: https://www.hackerrank.com/challenges/kangaroo/problem?isFullScreen=true
+// https://www.hackerrank.com/challenges/kangaroo/problem?isFullScreen=true
+// From Java 21
 
 import java.util.List;
 import java.util.Scanner;
@@ -10,22 +11,22 @@ public class Solution {
 
     public static void main(String[] args) {
         scan = new Scanner(System.in);
-        List<Integer> array = readIntArray();
+        final int n = 4;
+        List<Integer> array = readIntArray(n);
         System.out.println(kangaroo(array));
     }
 
-        private static List<Integer> readIntArray() {
-            return Stream.of(scan.nextLine().split(" ")).map(Integer::parseInt).collect(toList());
+        public static List<Integer> readIntArray(final int n) {
+            return Stream.of(new Integer[n]).map(_ -> scan.nextInt()).collect(toList());
         }
 
-        private static String kangaroo(final List<Integer> array) {
-            int x1 = array.get(0);
+        public static String kangaroo(final List<Integer> array) {
+            int x1 = array.getFirst();
             int v1 = array.get(1);
             int x2 = array.get(2);
-            int v2 = array.get(3);
+            int v2 = array.getLast();
 
-            if (v2 >= v1)
-                return "NO";
+            if (v2 >= v1) return "NO";
             for (; x1 < x2; x1 += v1, x2 += v2);
             return x1 == x2 ? "YES" : "NO";
         }
